# Fusion-Analysis

./: .gitignore  docker-compose.yml
Analysis Engine/: .gitignore  Dockerfile  TODO.md  kv_store.db  main.py  pyproject.toml  sql.sql  test.py
Analysis Engine/app/: config.py
Analysis Engine/app/analysis/: customer_risk_analysis.py  sanction_and_watchlist_analysis.py  transaction_monitoring.py  transaction_risk_analysis.py
Analysis Engine/app/configuration/: __init__.py  analysis_configuration.py  configuration.py  connections_configuration.py  initialize_configuration.py  schema_configuration.py  websocket_configuration.py
Analysis Engine/app/data/: generate_data.py
Analysis Engine/app/database/: database.py  db_init.py
Analysis Engine/app/dto/: configuration_data.py  transaction_data.py
Analysis Engine/app/mapper/: customer_risk_profile_mapper.py  transaction_risk_profile_mapper.py
Analysis Engine/app/model/: __init__.py  countries.py  customer_risk_profile.py  risk_and_sanctions_models.py  sanction_list.py  transaction.py  transaction_model.py  transaction_risk_model.py  transaction_risk_profile.py  watch_list.py
Analysis Engine/app/repository/: customer_risk_profile_repository.py  customer_risk_repository.py  sanction_watchlist_risk_repository.py  swc_repository.py  transaction_repository.py  transaction_risk_profile_repository.py  transaction_risk_repository.py
Analysis Engine/app/service/: Transaction_monitoring_service.py  configuration_service.py  customer_risk_analysis_service.py  data_processing_service.py  transaction_risk_analysis_service.py  (+1 more)
(+45 files in other folders)
