[project]
name = "analysis-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=38.0.0",
    "fastapi>=0.121.3",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "uvicorn[standard]>=0.38.0",
]
